--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "connect-redis": "^3.2.0",
     "gulp": "3.9.0",
     "gulp-develop-server": "0.5.0",
     "gulp-jshint": "1.12.0"
