--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "1.14.1",
     "express": "4.13.3",
     "fs": "0.0.2",
+    "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "mongoose": "^4.8.6",
     "multer": "1.1.0"
