--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "app.js",
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "connect-redis": "^3.2.0",
-    "gulp": "3.9.0",
-    "gulp-develop-server": "0.5.0",
-    "gulp-jshint": "1.12.0"
+  "license": "",
+  "scripts": {
+    "start": "node app.js"
   },
+  "devDependencies": {},
   "dependencies": {
     "body-parser": "1.14.1",
     "express": "4.13.3",
