--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "mongoose": "^4.8.6",
-    "multer": "1.1.0"
+    "multer": "1.1.0",
+    "redis": "^2.7.1"
   }
 }
